--- a/Personal Projects/Refreash/style.css
+++ b/Personal Projects/Refreash/style.css
@@ -1,3 +1,8 @@
+* { 
+  background-color: rgb(255, 255, 255);
+}
+
+
 body {
   padding: 10px 30px;
   overflow-x: hidden;
@@ -53,3 +58,4 @@ button {
 .invert { 
   filter: invert(100%);
 }
+
