--- a/Personal Projects/multi_media1/Adj.css
+++ b/Personal Projects/multi_media1/Adj.css
@@ -100,6 +100,24 @@ body {
   bottom: 3vw;
   background-color: lightsalmon;
 }
+
+.setting_box { 
+  position: fixed; 
+  right: 5%; 
+  top: 5%; 
+  padding: 0.5%; 
+  background-color: blueviolet; 
+  display: flex; 
+  flex-direction: column;
+  border-radius: 20%;
+  z-index: 5;
+}
+
+.setting_box > button { 
+  margin: 1.5%; 
+  border-radius: 80%;
+  padding: 1.5% 0; 
+}
 /* Things for later - text edition 
 
  font-size: calc(10.5px + 1.15vw); 
