--- a/Web_Apps2/style.css
+++ b/Web_Apps2/style.css
@@ -6,7 +6,7 @@
 */ 
 
 body { 
-    background-color: rgba(119, 118, 118, 0.411)
+    background-color: rgb(200, 200, 200); 
 }
 
 img { 
@@ -51,19 +51,27 @@ text-decoration-style: wavy ;
     background-color: blueviolet;
     display: flex;
     align-items: center;
-    padding: 0.5% 0.5%;
     flex-direction: column;
+    padding: 0.5%; 
     border-radius: 10%;
   }
   
   .setting_box > button {
     margin: 5px;
-    font-size: 1vw;
-    padding: 0 5%;
+    font-size: 1em;
+    padding: 0 15%;
     border-radius: 50%;
-    width: 75%; 
   }
   
   .invert { 
     filter: invert(100%);
+  }
+
+  #easter_egg { 
+    border: none;
+    /* color: rgba(200, 200, 200); */ 
+    opacity: 0; 
+    color: yellow; 
+    background-color:rgba(255, 255, 255, 0); 
+    filter: invert(100%); 
   }
