--- a/great_connector/script/css/main_outline.css
+++ b/great_connector/script/css/main_outline.css
@@ -113,14 +113,17 @@ ul > h2 {
 
 .bottomlink{
   position: absolute; 
-  right: 0; bottom: 0; 
-  background-color: rgba(137, 43, 226, 0.63);
-  padding: .5%; 
+  display: inline-block; 
+  padding: 2.5%; 
+  right: 0; 
+  bottom: 0; 
 }
 
 .bottomlink > a { 
-  margin: 5px; 
+  display: inline; 
+  margin: 0 5px; 
   color: white;
+  background-color: rgba(137, 43, 226, 0.63);
 }
 
 .bottomlink > a:hover { 
